Added workflow_dispatch to docusaurus workflow

--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -1,6 +1,7 @@
 # (...)
 jobs:
   deploy:
+    on: [workflow-dispatch]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
