--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -1,7 +1,6 @@
-# (...)
 jobs:
   deploy:
-    on: [workflow-dispatch]
+    on: [workflow_dispatch]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
