--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -1,6 +1,9 @@
+name: docusaurus-deploy
+
+on: [workflow_dispatch]
+
 jobs:
   deploy:
-    on: [workflow_dispatch]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
